# camsim

./: .gitignore  CMakeLists.txt  README.md
include/fvlam/: build_marker_map_interface.hpp  camera_info.hpp  factors_gtsam.hpp  localize_camera_interface.hpp  logger.hpp  marker.hpp  marker_map.hpp  marker_observation.hpp  marker_observations.hpp  model.hpp  observation.hpp  observations.hpp  observations_bundle.hpp  transform3_with_covariance.hpp
src/: build_marker_map_runner.cpp  build_marker_map_runner.hpp  cal_run.cpp  cal_run.hpp  cal_run_main.cpp  cal_solver_homography.cpp  cal_solver_opencv.cpp  cal_solver_project_between.cpp  cal_solver_project_calibrate.cpp  cal_solver_runner.cpp  cal_solver_runner.hpp  calibration_board_config.hpp  calibration_model.cpp  calibration_model.hpp  camsim.cpp  camsim.hpp  gtsam_resection.cpp  kal_kalman_filter_x.cpp  kal_opencv_filter.cpp  kal_run.cpp  kal_run.hpp  kal_run_main.cpp  map_global.cpp  map_run.cpp  map_run.hpp  map_solver_marker_marker.cpp  map_solver_project_between.cpp  map_solver_runner.hpp  model.cpp  model.hpp  opencv_resection.cpp  pfm_gtsam_resection.cpp  pfm_model.cpp  pfm_model.hpp  pfm_opencv_resection.cpp  pfm_optimize_pose3.cpp  pfm_resection_gtsam.cpp  pfm_resection_monte_carlo.cpp  pfm_resection_opencv.cpp  pfm_run.cpp  (+37 more)
src/cal/: cal_run.cpp  cal_run.hpp  cal_solver_homography.cpp  cal_solver_opencv.cpp  cal_solver_project_calibrate.cpp  cal_solver_runner.cpp  cal_solver_runner.hpp
src/data/: observations_sequence.json  observations_sequence_x.json  three_circles_of_markers_map.yaml
src/fvlam/: build_marker_map_shonan.cpp  build_marker_map_tmm.cpp  conversions_cv.cpp  conversions_gtsam.cpp  file_storage.cpp  localize_camera_gtsam.cpp  model.cpp  to_string.cpp  transform3_with_covariance.cpp  transform_from_observation_cv.cpp
src/kal/: kal_kalman_filter_x.cpp  kal_opencv_filter.cpp
src/map/: map_global.cpp  map_run.cpp  map_run.hpp  map_solver_marker_marker.cpp  map_solver_project_between.cpp  map_solver_runner.hpp
src/pfm/: pfm_optimize_pose3.cpp  pfm_resection_gtsam.cpp  pfm_resection_monte_carlo.cpp  pfm_resection_opencv.cpp  pfm_resection_projection.cpp  pfm_run.cpp
src/pfp/: pfp_gspnp.cpp  pfp_marker_pose_from_corners.cpp  pfp_odometry_example_3d.cpp  pfp_pose_unit_test.cpp  pfp_run.cpp  pfp_run.hpp
src/sfm/: sfm_gtsam_example.cpp  sfm_isam2.cpp  sfm_isam2_example.cpp  sfm_resectioning.cpp  sfm_resectioning.hpp  sfm_run.cpp  sfm_run.hpp
src/sho/: sho_inter_marker_rotation.cpp  sho_run.cpp  sho_run.hpp  sho_run_main.cpp
src/smf/: ConcurrentFilteringAndSmoothingExample.cpp  FixedLagSmootherExample.cpp  ISAM2Example_SmartFactor.cpp  SFMExample_SmartFactor.cpp  cal_info.hpp  factors_gtsam_test.cpp  inter_marker_pose.cpp  intra_imager_pose.cpp  smart_factor_pose.cpp  smf_run.cpp  smf_run.hpp
src/test/: cal_test.cpp  camsim_test.cpp  file_storage_test.cpp  map_test.cpp  pfm_test.cpp  pfp_test.cpp  sfm_test.cpp  sho_test.cpp  smf_test.cpp  tmm_test.cpp
